[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "A maze generation and solving library"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools.packages.find]
include = ["mazegen*"]

[dependency-groups]
dev = [
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "build>=1.0.0",
]
[tool.mypy]
exclude = '(^|/)\.venv/'